generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id                  String         @id @default(uuid()) @db.Uuid
  email               String         @unique
  password            String
  status              UserStatus     @default(PENDING)
  createdAt           DateTime       @default(now()) @map("created_at")
  emailVerified       Boolean        @default(false) @map("email_verified")
  verificationCode    String?        @map("verification_code")
  verificationExpiry  DateTime?      @map("verification_expiry")
  googleId            String?        @unique @map("google_id")
  passwordSetRequired Boolean        @default(false) @map("password_set_required")
  adminLogs           AdminLog[]
  driver              Driver?
  host                Host?
  notifications       Notification[]
  userRoles           UserRole[]
  wallet              Wallet?

  @@map("users")
}

model Role {
  id        String     @id @default(uuid()) @db.Uuid
  name      RoleName   @unique
  userRoles UserRole[]

  @@map("roles")
}

model UserRole {
  userId String @map("user_id") @db.Uuid
  roleId String @map("role_id") @db.Uuid
  role   Role   @relation(fields: [roleId], references: [id], onDelete: Cascade)
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, roleId])
  @@map("user_roles")
}

model Wallet {
  id           String              @id @default(uuid()) @db.Uuid
  userId       String              @unique @map("user_id") @db.Uuid
  balance      Decimal             @default(0) @db.Decimal(15, 2)
  status       WalletStatus        @default(ACTIVE)
  createdAt    DateTime            @default(now()) @map("created_at")
  transactions WalletTransaction[]
  user         User                @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("wallets")
}

model WalletTransaction {
  id            String            @id @default(uuid()) @db.Uuid
  walletId      String            @map("wallet_id") @db.Uuid
  type          TransactionType
  source        TransactionSource
  amount        Decimal           @db.Decimal(15, 2)
  referenceId   String?           @map("reference_id") @db.Uuid
  balanceBefore Decimal           @map("balance_before") @db.Decimal(15, 2)
  balanceAfter  Decimal           @map("balance_after") @db.Decimal(15, 2)
  createdAt     DateTime          @default(now()) @map("created_at")
  reservations  Reservation?
  wallet        Wallet            @relation(fields: [walletId], references: [id], onDelete: Cascade)

  @@index([walletId, createdAt])
  @@map("wallet_transactions")
}

model Driver {
  id                 String             @id @default(uuid()) @db.Uuid
  userId             String             @unique @map("user_id") @db.Uuid
  licenseNumber      String?            @map("license_number")
  licenseImageUrl    String?            @map("license_image_url")
  verificationStatus VerificationStatus @default(PENDING) @map("verification_status")
  createdAt          DateTime           @default(now()) @map("created_at")
  vehicles           DriverVehicle[]
  user               User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  reservations       Reservation[]

  @@map("drivers")
}

model DriverVehicle {
  id          String       @id @default(uuid()) @db.Uuid
  driverId    String       @map("driver_id") @db.Uuid
  plateNumber String?      @map("plate_number")
  vehicleType VehicleType? @map("vehicle_type")
  brand       String?
  color       String?
  isActive    Boolean      @default(true) @map("is_active")
  createdAt   DateTime     @default(now()) @map("created_at")
  driver      Driver       @relation(fields: [driverId], references: [id], onDelete: Cascade)

  @@map("driver_vehicles")
}

model Host {
  id                 String             @id @default(uuid()) @db.Uuid
  userId             String             @unique @map("user_id") @db.Uuid
  verificationStatus VerificationStatus @default(PENDING) @map("verification_status")
  createdAt          DateTime           @default(now()) @map("created_at")
  user               User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  parkingLocations   ParkingLocation[]

  @@map("hosts")
}

model ParkingLocation {
  id               String                 @id @default(uuid()) @db.Uuid
  hostId           String                 @map("host_id") @db.Uuid
  title            String
  description      String?
  address          String
  latitude         Decimal                @db.Decimal(10, 7)
  longitude        Decimal                @db.Decimal(10, 7)
  basePricePerHour Decimal                @map("base_price_per_hour") @db.Decimal(10, 2)
  status           LocationStatus         @default(PENDING)
  totalSlots       Int?                   @map("total_slots")
  availableSlots   Int?                   @map("available_slots")
  createdAt        DateTime               @default(now()) @map("created_at")
  images           ParkingLocationImage[]
  host             Host                   @relation(fields: [hostId], references: [id], onDelete: Cascade)
  parkingSpaces    ParkingSpace[]

  @@map("parking_locations")
}

model ParkingLocationImage {
  id                String          @id @default(uuid()) @db.Uuid
  parkingLocationId String          @map("parking_location_id") @db.Uuid
  imageUrl          String          @map("image_url")
  isPrimary         Boolean         @default(false) @map("is_primary")
  createdAt         DateTime        @default(now()) @map("created_at")
  parkingLocation   ParkingLocation @relation(fields: [parkingLocationId], references: [id], onDelete: Cascade)

  @@map("parking_location_images")
}

model ParkingSpace {
  id                String          @id @default(uuid()) @db.Uuid
  parkingLocationId String          @map("parking_location_id") @db.Uuid
  slotNumber        Int             @map("slot_number")
  status            SlotStatus      @default(AVAILABLE)
  isActive          Boolean         @default(true) @map("is_active")
  createdAt         DateTime        @default(now()) @map("created_at")
  parkingLocation   ParkingLocation @relation(fields: [parkingLocationId], references: [id], onDelete: Cascade)
  reservations      Reservation[]

  @@unique([parkingLocationId, slotNumber])
  @@map("parking_spaces")
}

model Reservation {
  id                  String             @id @default(uuid()) @db.Uuid
  driverId            String             @map("driver_id") @db.Uuid
  parkingSpaceId      String             @map("parking_space_id") @db.Uuid
  startTime           DateTime           @map("start_time")
  endTime             DateTime           @map("end_time")
  status              ReservationStatus  @default(PENDING)
  qrCode              String?            @map("qr_code")
  totalAmount         Decimal            @map("total_amount") @db.Decimal(10, 2)
  walletTransactionId String?            @unique @map("wallet_transaction_id") @db.Uuid
  createdAt           DateTime           @default(now()) @map("created_at")
  payments            Payment[]
  driver              Driver             @relation(fields: [driverId], references: [id])
  parkingSpace        ParkingSpace       @relation(fields: [parkingSpaceId], references: [id])
  walletTransaction   WalletTransaction? @relation(fields: [walletTransactionId], references: [id])
  reviews             Review[]

  @@index([parkingSpaceId, startTime, endTime])
  @@map("reservations")
}

model Payment {
  id             String        @id @default(uuid()) @db.Uuid
  reservationId  String        @map("reservation_id") @db.Uuid
  amount         Decimal       @db.Decimal(10, 2)
  paymentMethod  String?       @map("payment_method")
  status         PaymentStatus @default(PENDING)
  transactionRef String?       @map("transaction_ref")
  createdAt      DateTime      @default(now()) @map("created_at")
  reservation    Reservation   @relation(fields: [reservationId], references: [id], onDelete: Cascade)

  @@map("payments")
}

model Review {
  id            String      @id @default(uuid()) @db.Uuid
  reservationId String      @map("reservation_id") @db.Uuid
  rating        Int
  comment       String?
  createdAt     DateTime    @default(now()) @map("created_at")
  reservation   Reservation @relation(fields: [reservationId], references: [id], onDelete: Cascade)

  @@map("reviews")
}

model Notification {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  title     String
  message   String
  isRead    Boolean  @default(false) @map("is_read")
  createdAt DateTime @default(now()) @map("created_at")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("notifications")
}

model AdminLog {
  id        String   @id @default(uuid()) @db.Uuid
  adminId   String   @map("admin_id") @db.Uuid
  action    String
  targetId  String?  @map("target_id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  admin     User     @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@map("admin_logs")
}

enum UserStatus {
  PENDING
  APPROVED
  BLOCKED
}

enum RoleName {
  DRIVER
  HOST
  ADMIN
}

enum WalletStatus {
  ACTIVE
  SUSPENDED
}

enum TransactionType {
  CREDIT
  DEBIT
}

enum TransactionSource {
  TOP_UP
  RESERVATION_PAYMENT
  REFUND
  ADMIN_ADJUSTMENT
  HOST_PAYOUT
}

enum VerificationStatus {
  PENDING
  VERIFIED
  REJECTED
}

enum VehicleType {
  CAR
  MOTORCYCLE
  SUV
}

enum LocationStatus {
  PENDING
  APPROVED
  REJECTED
}

enum SlotStatus {
  AVAILABLE
  OCCUPIED
  DISABLED
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  ACTIVE
  COMPLETED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
}
